--- a/index.html
+++ b/index.html
@@ -76,14 +76,30 @@
         <h3>Nossos jogadores e seus numeros</h3>
 
         <ul>
-            <li>Caio 1</li>
-            <li>Nathan 10</li>
-            <li>Caio 3</li>
-            <li>Davi Jr 17</li>
-            <li>Bernardo 14</li>
-            <li>Gabriel 7</li>
-            <li>Davi 9</li>
-            <li>Marcelo 11</li>
+            <abbr title="Goleiro">
+                <li>Caio 1</li>
+            </abbr>
+            <abbr title="Fixo">
+                <li>Nathan 10</li>
+            </abbr>
+            <abbr title="Fixo">
+                <li>Caio 3</li>
+            </abbr>
+            <abbr title="Ala">
+                <li>Davi Jr 17</li>
+            </abbr>
+            <abbr title="Ala">
+                <li>Bernardo 14</li>
+            </abbr>
+            <abbr title="Ala">
+                <li>Gabriel 7</li>
+            </abbr>
+            <abbr title="Pivô">
+                <li>Davi 9</li>
+            </abbr>
+            <abbr title="Pivô">
+                <li>Marcelo 11</li>
+            </abbr>
         </ul>
     </aside>
 
