--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valdir United</title>
+    <title>Valdir FC</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="valfirfc.jpg" type="image/x-icon">
 </head>
